fix(science): fix tab icon

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/mainBench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/mainBench.scss
@@ -103,6 +103,10 @@
             line-height: 20px;
             border-bottom: 1px solid #DDDDDD;
         }
+        .c-panel__siderbar__title__icon {
+            margin-right: 0px;
+            margin-bottom: 2px;
+        }
         .c-panel__siderbar__form {
             padding: 20px 15px;
             .ant-form-item {
