feat(science): fix switch tab problem

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/mainBench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/mainBench.scss
@@ -19,7 +19,17 @@
     }
 
     &>.ant-tabs {
-        
+
+        &.experiment {
+            
+            .ant-tabs-content.ant-tabs-content-no-animated {
+                height: 0px;
+                min-height: 0px;
+                border-bottom: 0px;
+                background: #fff;
+            }
+        }
+
         &>.ant-tabs-bar {
 
             margin-bottom: 0px;
