feat: cell copy or delete by shortcut key

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/graph.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/graph.scss
@@ -6,6 +6,12 @@
         background-repeat: repeat;
     }
 
+    .editor {
+        &::-webkit-scrollbar-track {
+            border: 0;
+        }
+    }
+
     .txt-bg {
         font-size: 40px;
         color: #2491f7;
