--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/mainBench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/mainBench.scss
@@ -100,6 +100,7 @@
         bottom: 0px;
         left: 0px;
         right: 30px;
+        padding-bottom: 32px;
     }
     .c-panel__siderbar{
         position: absolute;
