--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/mainBench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/mainBench.scss
@@ -1,5 +1,11 @@
 .m-mainbench {
 
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+
     .ide-toobar-select {
         margin-left: 10px;
         width: 120px;
