--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/index.scss
@@ -116,17 +116,17 @@
         font-family: "anticon" !important;
     }
 }
-.anchor-component-file {
+.sidebar .ant-tree .anchor-component-file {
     // 数据源/目标
     &.o-tree-icon--data-source .ant-tree-iconEle::before{
-        font-size: 16px;
+        font-size: 14px;
         content: "\E650";
         display: block;
         font-family: "anticon" !important;
     }
     // 数据工具
     &.o-tree-icon--data-tools .ant-tree-iconEle::before{
-        font-size: 16px;
+        font-size: 14px;
         content: "\E6D9";
         display: block;
         font-family: "anticon" !important;
@@ -134,22 +134,32 @@
     // 数据合并
     &.o-tree-icon--data-merge .ant-tree-iconEle {
         background-image: url(/public/science/img/icon/data_merge.svg);
+        width: 14px;
+        height: 14px;
     }
     // 预测
     &.o-tree-icon--data-pre-hand .ant-tree-iconEle {
         background-image: url(/public/science/img/icon/data_prehand.svg);
+        width: 14px;
+        height: 14px;
     }
     // 机器学习
     &.o-tree-icon--machine-learning .ant-tree-iconEle {
         background-image: url(/public/science/img/icon/machine_learning.svg);
+        width: 14px;
+        height: 14px;
     }
     // 数据预测
     &.o-tree-icon--data-predict .ant-tree-iconEle {
         background-image: url(/public/science/img/icon/data_predict.svg);
+        width: 14px;
+        height: 16px;
     }
     // 数据评估
     &.o-tree-icon--data-evaluate .ant-tree-iconEle {
         background-image: url(/public/science/img/icon/data_evaluate.svg);
+        width: 14px;
+        height: 14px;
     }
 }
 .s-tree-folder {
