--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/graph.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/graph.scss
@@ -249,6 +249,31 @@ table.mxPopupMenu tr {
         letter-spacing: 0;
         line-height: 18px;
         font-weight: normal;
+
+        .circle{
+            // 过程中状态的点点点
+            $width: 5px;
+            width: $width;
+            height: $width;
+            border-radius: 50%;
+            background: rgb(180,180,180);
+            margin: 0 2px;
+            display: inline-block;
+            animation: loadingCircle 1s infinite linear;
+            animation-direction: alternate;
+            transition: background 1s;
+            &:nth-child(2){
+                animation-delay: 0.5s; 
+            }
+            &:nth-child(3){
+                animation-delay: 1s; 
+            }
+        }
+        @keyframes loadingCircle { 
+            0% {background: rgb(213,213,213);}
+            50% {background: rgb(180,180,180);}
+            100%{background:rgb(150,150,150);}
+          }
     }
 
     .vertex-desc {
