feat(science): fix chart height

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/graph.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/graph.scss
@@ -385,7 +385,12 @@ td.mxPopupMenuIcon {
 	opacity: 0.2 !important;
 	cursor:default !important;
 }
-
+// 评估报告窗口
+.m-tabs {
+    .ant-tabs-content {
+        height: 100%;
+    }
+}
 
 
 
