--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
@@ -195,7 +195,11 @@
                 }
 
                 .params-single-tab-content {
-                    padding: 9.5px 14px;
+                    padding: 9.5px 0px;
+                    
+                    .ant-collapse-item {
+                        padding: 0px 14px;
+                    }
                 }
             }
 
@@ -225,7 +229,8 @@
                         padding: 0;
 
                         >.ant-collapse-content-box {
-                            padding: 10px 0;
+                            padding-top: 10px;
+                            padding-bottom: 0;
                         }
                         .toolbar {
                             background: #fff;
