--- a/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
@@ -164,7 +164,18 @@
             border-bottom: 1px solid #e9e9e9;
         }
     }
-
+}
+.dt-ant-table--border {
+    .ant-table-body{
+        border-width: 1px 1px 0px 1px;
+        border-color: #dcdcdc;
+        border-style: solid;
+    }
+    .ant-table-placeholder{
+        border-width: 0px 1px 1px 1px;
+        border-style: solid;
+        border-color: #dcdcdc;
+    }
 }
 .m-table {
     
@@ -462,6 +473,39 @@
         width:100%;
         > div{
             width:100%
+        }
+    }
+}
+
+.dt-ant-table{
+    > .ant-spin-nested-loading {
+        > .ant-spin-container {
+            > .ant-table {
+                table{
+                    font-size: 13px;
+                    color: #333;
+                    .ant-table-thead {
+                        tr {
+                            th {
+                                background-color: #fafafa;
+                                padding-top: 11px;
+                                padding-bottom: 11px;
+                                border-bottom: 1px solid #DDDDDD;
+                                color: #666;
+                                font-weight: normal;
+                            }
+                        }
+                    }
+                    .ant-table-tbody {
+                        tr {
+                            td {
+                                padding-top: 11px;
+                                padding-bottom: 11px;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
