--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/operation/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/operation/index.scss
@@ -126,43 +126,27 @@
             margin: 10px 0;
         }
     }
-
     .ant-card-body {
         padding: 11px 20px;
-
-        .m-table {
-            table {
-                border: 1px solid #DDDDDD;
-                border-bottom: 0;
-            }
-
-            .ant-table-placeholder {
-                border: 1px solid #DDDDDD;
-                border-top: 0;
-                margin-top: -1px;
-            }
-
-            .ant-table-thead .ant-table-selection-column span {
-                visibility: visible;
-            }
-
+        .dt-ant-table {
+            
             .ant-table-footer {
                 border-bottom: 0;
                 margin-top: 10px;
                 margin-bottom: 2px;
                 padding: 0;
                 background: transparent;
-
+    
                 &:before {
                     background: transparent;
                 }
-
+    
                 button {
                     width: 94px;
                     height: 30px;
                     font-size: 13px;
                 }
-
+    
                 .ant-pagination {
                     float: right
                 }
