fix(science): fix style

--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/operation/index.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/operation/index.scss
@@ -154,3 +154,10 @@
         }
     }
 }
+.c-antd-tabs-sidebar.c-ant-tabs-fixed.ant-tabs-vertical.ant-tabs-left{
+    > .ant-tabs-content {
+        height: 100%;
+        overflow-y: auto;
+        background: #ffffff;
+    }
+}
