--- a/engine-ui/packages/console-ui/src/webapps/console/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/main.scss
@@ -27,3 +27,9 @@ table{
 .ant-table-thead > tr > th:text-middle {
     text-align: center;
 }
+.console-wrapper {
+    .ant-card-body {
+        padding: 0
+    }
+}
+
