--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
@@ -1,12 +1,25 @@
 .config-title{
-    font-size:20px;
-    padding-left: 8px;
-    border-bottom: 3px solid #f5f5f6;
-}
-.config-content{
+    font-family: PingFangSC-Medium;
+    font-size: 16px;
+    color: #333333;
+    letter-spacing: 0;
     margin-top: 10px;
     padding-left: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 5px;
+}
+.engine-config-content{
+    margin-top: 20px;
+    // padding-left: 20px;
+    margin-bottom: 20px;
+    margin-left: 24px;
+}
+.config-bottom {
+    width: 100%;
+    height: 50px;
+    background: #FFFFFF;
+    // box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
+    // border: 1px solid red;
+    line-height: 50px;
 }
 .checkboxStyle {
     margin-left: 165px;
@@ -82,4 +95,67 @@
 }
 .ant-tooltip-inner {
     max-width: 300px;
+}
+.upload-config {
+    margin: -21px 0 50 95px;
+}
+.console-tabs .ant-tabs-vertical.ant-tabs-left > .ant-tabs-bar .ant-tabs-tab {
+    text-align: right;
+    height: 40;
+}
+.console-tabs .ant-tabs-vertical.ant-tabs-left > .ant-tabs-bar {
+    float: left;
+    // border-right: 2px solid #DDDDDD;
+    border-right: 1px solid #e9e9e9;
+    margin-right: -1px;
+    margin-bottom: 0;
+    width: 180px;
+}
+.console-tabs .ant-tabs-vertical.ant-tabs-left > .ant-tabs-content {
+    padding-left: 0px;
+    border-left: 1px solid #e9e9e9;
+}
+.console-tabs .tab-title {
+    margin-right: 8px;
+}
+.console-tabs .ant-tabs-nav .ant-tabs-tab-active .tab-title{
+    color: #2491F7;
+}
+
+.console-tabs .ant-tabs-vertical > .ant-tabs-bar .ant-tabs-tab {
+    float: none;
+    margin-right: 0;
+    margin-bottom: 16px;
+    display: block;
+    padding: 8px 10px 8px 24px;
+}
+
+.console-tabs .ant-tabs-nav .ant-tabs-tab:hover {
+    color: rgba(0, 0, 0, 0.65);
+}
+.console-tabs .ant-tabs-nav .ant-tabs-tab .tab-title:hover {
+    color: #58abf9;
+}
+.console-tabs .ant-tabs-nav .ant-tabs-tab-active {
+    color: rgba(0, 0, 0, 0.65);
+}
+.success-icon {
+    font-family: anticon;
+    font-size: 16px;
+    color: #00A755;
+}
+.err-icon {
+    font-family: anticon;
+    font-size: 16px;
+    color: #E6432C;
+}
+.icon_required {
+    font-family: PingFangSC-Regular;
+    font-size: 13px;
+    width: 12px;
+    color: #EF5350;
+    height: 20px;
+    line-height: 20px;
+    display: inline-block;
+    text-align: left;
 }
