feat(console): optimize code and add some feat
optimize code and add some feat

--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
@@ -149,6 +149,11 @@
     font-size: 16px;
     color: #E6432C;
 }
+.back-icon {
+    float: left;
+    margin-left: 20px;
+    padding: 4px;
+}
 .icon_required {
     font-family: PingFangSC-Regular;
     font-size: 13px;
