--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/operation.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/operation.scss
@@ -156,7 +156,7 @@
         margin-right: 10px;
     }
     .ant-tree-node-content-wrapper {
-        width: 90%;
+        width: calc(100% - 44px);
     }
     .patch-header {
         margin: 5px;
