--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
@@ -14,56 +14,25 @@
     margin-left: 24px;
 }
 .config-bottom {
+    position: absolute;
+    bottom: 116px;
     width: 100%;
     height: 50px;
     background: #FFFFFF;
-    // box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
-    // border: 1px solid red;
     line-height: 50px;
+    padding: 11px 0;
+    box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
 }
 .checkboxStyle {
     margin-left: 165px;
     margin-bottom: 20px;
-    // background: red;
 }
-// .ant-collapse > .ant-collapse-item {
-//     border: none;
-// }
-// .ant-collapse > .ant-collapse-item-active {
-//     background: #fff;
-//     border: none;
-// }
-// .ant-collapse > .ant-collapse-item > .ant-collapse-header {
-//     // line-height: 22px;
-//     // padding: 8px 0 8px 32px;
-//     color: rgba(0, 0, 0, 0.85);
-//     cursor: pointer;
-//     position: relative;
-//     transition: all .3s;
-//     border:none;
-//     background: red;
-//     width: 220px;
-// }
-
-// .ant-collapse-borderless > .ant-collapse-item > .ant-collapse-header:hover {
-//     background-color: #fff;
-// }
-
-// .ant-collapse-borderless > .ant-collapse-item > .ant-collapse-content {
-//     background-color: #fff;
-//     border: none;
-// }
-
-// .ant-collapse-content > .ant-collapse-content-box {
-//     padding-top: 5px;
-//     // margin-left: -12px;
-// }
-// .ant-collapse-content {
-//     overflow: hidden;
-//     color: rgba(0, 0, 0, 0.65);
-//     /* padding: 0 16px; */
-//     background-color: #fff;
-// }
+.dashed-line {
+    width: 100%;
+    height: 0;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed #DDDDDD;
+}
 .blue-loading{
     color:#2491F7;
     padding-left: 5px;
@@ -99,46 +68,6 @@
 .upload-config {
     margin: -21px 0 50 95px;
 }
-.console-tabs .ant-tabs-vertical.ant-tabs-left > .ant-tabs-bar .ant-tabs-tab {
-    text-align: right;
-    height: 40;
-}
-.console-tabs .ant-tabs-vertical.ant-tabs-left > .ant-tabs-bar {
-    float: left;
-    // border-right: 2px solid #DDDDDD;
-    border-right: 1px solid #e9e9e9;
-    margin-right: -1px;
-    margin-bottom: 0;
-    width: 180px;
-}
-.console-tabs .ant-tabs-vertical.ant-tabs-left > .ant-tabs-content {
-    padding-left: 0px;
-    border-left: 1px solid #e9e9e9;
-}
-.console-tabs .tab-title {
-    margin-right: 8px;
-}
-.console-tabs .ant-tabs-nav .ant-tabs-tab-active .tab-title{
-    color: #2491F7;
-}
-
-.console-tabs .ant-tabs-vertical > .ant-tabs-bar .ant-tabs-tab {
-    float: none;
-    margin-right: 0;
-    margin-bottom: 16px;
-    display: block;
-    padding: 8px 10px 8px 24px;
-}
-
-.console-tabs .ant-tabs-nav .ant-tabs-tab:hover {
-    color: rgba(0, 0, 0, 0.65);
-}
-.console-tabs .ant-tabs-nav .ant-tabs-tab .tab-title:hover {
-    color: #58abf9;
-}
-.console-tabs .ant-tabs-nav .ant-tabs-tab-active {
-    color: rgba(0, 0, 0, 0.65);
-}
 .success-icon {
     font-family: anticon;
     font-size: 16px;
@@ -163,4 +92,33 @@
     line-height: 20px;
     display: inline-block;
     text-align: left;
+}
+.engine-opera {
+    color: #2491F7;
+    background: transparent;
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    transition: color 0.3s ease;
+    position: absolute;
+    display: inline-block;
+    right: -60;
+}
+.console-wrapper .ant-tabs-nav .ant-tabs-tab {
+    display: inline-block;
+    height: auto;
+    margin-right: 24px;
+    box-sizing: border-box;
+    position: relative;
+    padding: 8px 20px;
+    transition: color 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    cursor: pointer;
+    text-decoration: none;
+}
+.console-wrapper .ant-tabs-bar {
+    border-bottom: 1px solid #dddddd;
+    margin-bottom: 0px;
+    outline: none;
+    transition: padding 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    margin: 0 20;
 }
