fix(rdos): change vertex width
#16479

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/graph-editor.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/graph-editor.scss
@@ -214,9 +214,11 @@ table.mxPopupMenu tr {
     margin-top: -2px;
     .vertex-across-logo {
         float: right;
+        width: 14px;
+        height: 14px;
     }
     .vertex-title {
-        width: 120px;
+        width: 105px;
         text-align: center;
         display: inline-block;
         overflow: hidden;
