--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
@@ -78,6 +78,27 @@
 .upload-config {
     margin: -21px 0 50 95px;
 }
+.upload-file {
+    width: 100%;
+    height: auto;
+    text-indent: 20px;
+    border-top: 1px dashed #DDDDDD;
+    .upload-title {
+        font-family: PingFangSC-Medium;
+        font-size: 16px;
+        color: #333333;
+        letter-spacing: 0;
+        margin-top: 10px;
+        margin-bottom: 8px;
+    }
+    .upload-help {
+        width: 100%;
+        height: 40px;
+        line-height: 40px;
+        border-top: 1px dashed #DDDDDD;
+        background-color: #F5F5F5;
+    }
+}
 .success-icon {
     font-family: anticon;
     font-size: 16px;
