feat(rdos): feat task project
feat task project

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -240,6 +240,11 @@
                 background-image: url(/public/rdos/img/experiment.svg)
             }
         }
+        .s-librasql {
+            .ant-tree-icon__docu {
+                background-image: url(/public/rdos/img/librqsql.svg)
+            }
+        }
         .s-table {
             .ant-tree-icon__docu {
                 background-image: url(/public/rdos/img/table.svg)
