--- a/engine-ui/packages/console-ui/src/webapps/console/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/main.scss
@@ -28,9 +28,15 @@ table{
     text-align: center;
 }
 .console-wrapper {
-    padding-bottom: 20px;
     .ant-card-body {
-        padding: 0
+        padding: 0;
+    }
+    .ant-tabs {
+        box-sizing: border-box;
+        position: relative;
+        overflow-y: auto;
+        zoom: 1;
+        color: rgba(0, 0, 0, 0.65);
     }
 }
 @mixin setTabBarWidth ($width) {
@@ -62,6 +68,7 @@ table{
     .ant-tabs-vertical.ant-tabs-left > .ant-tabs-bar {
         float: left;
         border-right: 1px solid #e9e9e9;
+        border-bottom: none;
         margin-right: -1px;
         margin-bottom: 0;
         margin-left: 0;
