--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
@@ -7,25 +7,33 @@
     padding-left: 20px;
     margin-bottom: 5px;
 }
+.tabpane-content {
+    padding-bottom: 30px;
+    max-height: 450px;
+    overflow: auto;
+}
 .engine-config-content{
     margin-top: 20px;
     // padding-left: 20px;
-    margin-bottom: 20px;
+    padding-bottom: 15px;
     margin-left: 24px;
+    width: 680px;
 }
 .config-bottom-short {
     position: absolute;
-    bottom: 40px;
+    z-index: 100;
+    // bottom: 0;
     width: 100%;
     height: 50px;
     background: #FFFFFF;
     line-height: 50px;
     padding: 11px 0;
-    box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
+    // box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
 }
 .config-bottom-long {
     position: absolute;
-    bottom: 243px;
+    bottom: 0;
+    z-index: 100;
     width: 100%;
     height: 50px;
     background: #FFFFFF;
