feat(dq): rewrite rule config

--- a/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
@@ -513,3 +513,11 @@
 .ant-calendar table {
     font-size: 12px;
 }
+.c-tabs--scroll {
+    > .ant-tabs {
+        > .ant-tabs-content {
+            height: calc(100% - 32px);
+            overflow: auto;
+        }
+    }
+}
