fix(rdos): fix datamap
fix datamap replace spark sql icon

fix #16782 #16799 #16810 #16824 #16823

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -125,7 +125,7 @@
         }
         .s-sqlicon {
             .ant-tree-icon__docu {
-                background-image: url(/public/rdos/img/sql.svg);
+                background-image: url(/public/rdos/img/sparksql.svg);
             }
         }
         .s-mlicon {
