--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
@@ -167,7 +167,7 @@
         }
         .s-sqlicon {
             .ant-tree-icon__docu {
-                background-image: url(/public/stream/img/sql.svg);
+                background-image: url(/public/stream/img/sparksql.svg);
             }
         }
         .s-jaricon-r {
