--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
@@ -7,9 +7,14 @@
     padding-left: 20px;
     margin-bottom: 5px;
 }
-.tabpane-content {
+.tabpane-content-max {
     padding-bottom: 30px;
     max-height: 450px;
+    overflow: auto;
+}
+.tabpane-content-min {
+    padding-bottom: 30px;
+    max-height: calc(100% - 60px);
     overflow: auto;
 }
 .engine-config-content{
@@ -22,13 +27,13 @@
 .config-bottom-short {
     position: absolute;
     z-index: 100;
-    // bottom: 0;
+    bottom: 0;
     width: 100%;
     height: 50px;
     background: #FFFFFF;
     line-height: 50px;
     padding: 11px 0;
-    // box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
+    box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
 }
 .config-bottom-long {
     position: absolute;
