fix(rdos sicence): fix table manage
fix table manage

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/taskComponent/welcome.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/taskComponent/welcome.scss
@@ -22,7 +22,7 @@
 }
 .c-welcome__menu__nav {
     margin-top: 12px;
-    a + a {
-        margin-left: 32px;
+    a {
+        margin-right: 32px;
     }
 }
