--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
@@ -27,13 +27,13 @@
 .config-bottom-short {
     position: absolute;
     z-index: 100;
-    bottom: 0;
+    bottom: 40px;
     width: 100%;
     height: 50px;
     background: #FFFFFF;
     line-height: 50px;
     padding: 11px 0;
-    box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
+    // box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
 }
 .config-bottom-long {
     position: absolute;
