--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
@@ -68,6 +68,7 @@ body:-webkit-full-screen {
 }
 
 .vertical-center-modal .ant-modal {
+    width: 536px !important;
     display: inline-block;
     vertical-align: middle;
     top: 0;
