fix(dataSync/source): fix the batch display optimization
fix #17259, fix #17260

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
@@ -225,6 +225,7 @@ body:-webkit-full-screen {
     .ant-transfer-list-search-action {
         padding-top: 8px;
     }
+    .ant-transfer-list-header-title {}
 }
 .warning-color{
     color:#ffbf00;
