feat(rdos): add task type
add task type

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -192,6 +192,11 @@
                 background-image: url(/public/rdos/img/icon/othericon.svg)
             }
         }
+        .s-hivesql {
+            .ant-tree-icon__docu {
+                background-image: url(/public/rdos/img/hivesql.svg)
+            }
+        }
         .s-cubeKylin {
             .ant-tree-icon__docu {
                 background-image: url(/public/rdos/img/cube_kylin.svg)
