--- a/engine-ui/packages/console-ui/src/widgets/spreadsheet/style.scss
+++ b/engine-ui/packages/console-ui/src/widgets/spreadsheet/style.scss
@@ -8,13 +8,13 @@
         }
     }
 }
-.ht_clone_left{
-    .htCore{
-        tbody{
-            tr th{
-                display: block;
-                height: 21px;
-            }
-        }
-    }
-}
+// .ht_clone_left{
+//     .htCore{
+//         tbody{
+//             tr th{
+//                 display: block;
+//                 height: 21px;
+//             }
+//         }
+//     }
+// }
