fix(style): fix the style

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/main.scss
@@ -68,7 +68,7 @@ body:-webkit-full-screen {
 }
 
 .vertical-center-modal .ant-modal {
-    width: 536px !important;
+    width: 536px;
     display: inline-block;
     vertical-align: middle;
     top: 0;
