--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -242,14 +242,14 @@
                 margin-top: -3px;
             }
             .ant-form-inline .ant-form-item{
-                margin-bottom: 10;
+                margin-bottom: 10px;
             }
         }
     }
     .m-table-fix {
         .ant-table-footer {
             background: #fff;
-            padding: 10 0 0;
+            padding: 10px 0 0;
             border-bottom: 0;
             border-top: 1px solid #e8e8e8;
         }
