--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/dashboard.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/dashboard.scss
@@ -104,7 +104,7 @@
             color:#333;
         }
         .general-card{
-            margin: 0 10 20;
+            margin: 0 10px 20px;
             height: 220px;
             .card-content{
                 position: relative;
