--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dashboard.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dashboard.scss
@@ -120,7 +120,7 @@
             color:#333;
         }
         .general-card{
-            margin: 0 5 10;
+            margin: 0 5px 10px;
             height: 220px;
             .card-content{
                 position: relative;
