fix(style): fix the style

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dashboard.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dashboard.scss
@@ -76,7 +76,7 @@
         .tooltip-img{
             width: 14px;
             float: right;
-            margin-top: 17;
+            margin-top: 17px;
         }
         // 生产测试项目图标
         .produce-img{
@@ -213,10 +213,10 @@
         line-height: 40px;
     }
     .ant-card-head{
-        padding: 0 10;
+        padding: 0 10px;
     }
     .ant-card-body{
-        padding: 16 10;
+        padding: 16px 10px;
     }
     
 
@@ -226,5 +226,5 @@
 //     color: #2491F7;
 // }
 .project-dashboard .ant-card-body {
-    padding: 10px 10;
+    padding: 10px 10px;
 }
