--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -256,7 +256,7 @@
         .ant-pagination {
             position: relative;
             top: -32px;
-            right: 20;
+            right: 20px;
             margin-right: 0;
         }
         .ant-table-pagination.ant-pagination {
@@ -398,7 +398,7 @@
     .ant-pagination {
         position: relative;
         top: -50px;
-        right: 20;
+        right: 20px;
         margin-right: 0;
     }
 }
