--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -410,12 +410,12 @@
 
 .diff-params {
     .title{
-        padding: 0 10 10;
+        padding: 0 10px 10px;
         font-size: 14px;
     }
     .box-padding {
-       margin-left: 10;
-       padding-left: 10;
+       margin-left: 10px;
+       padding-left: 10px;
        border: 1px solid #ccc;
        .schedulingCycle{
            min-height: 281px;
