--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
@@ -409,7 +409,7 @@
 
 .diff-params {
     .title{
-        padding: 0 10 10;
+        padding: 0 10px 10px;
         font-size: 14px;
     }
     .box-padding {
